@@ -34,18 +34,18 @@
 
     [%# Display the table header #%]
     <tr class="tlh">
-        <th colspan="2"><a href="[% list_sort_url | uri | html_entity %]&amp;topic_sort_change=title">Title</a></th>
-        <th><a href="[% list_sort_url | uri | html_entity %]&amp;topic_sort_change=author">Author</a></th>
+        <th colspan="2"><a href="[% list_sort_url | html_entity %]&amp;topic_sort_change=title">Title</a></th>
+        <th><a href="[% list_sort_url | html_entity %]&amp;topic_sort_change=author">Author</a></th>
         <th>Reviewer</th>
         <th>Cc</th>
-        <th><a href="[% list_sort_url | uri | html_entity %]&amp;topic_sort_change=created">Created</a></th>
+        <th><a href="[% list_sort_url | html_entity %]&amp;topic_sort_change=created">Created</a></th>
         [% FOREACH commentmetric = commentmetrics %]
             <th>[% commentmetric.value | html_entity %]</th>
         [% END %]
 	[% IF bugdb_enabled != 0 %]
         <th>Bug IDs</th>
 	[% END %]
-        <th><a href="[% list_sort_url | uri | html_entity %]&amp;topic_sort_change=state">State</a></th>
+        <th><a href="[% list_sort_url | html_entity %]&amp;topic_sort_change=state">State</a></th>
     </tr>
 
     [%# Display each topic row, alternating the background colour #%]
@@ -54,7 +54,7 @@
 
     <tr class="[% loop.count() % 2 == 0 ? 'tl1' : 'tl2' %]">
         <td><input TYPE="checkbox" NAME="selected_topics" VALUE="[% topic.id %],[% topic.version %]" /></td>
-        <td><a href="[% topic.view_topic_url | uri | html_entity %]">[% topic.title | html_entity %]</a></td>
+        <td><a href="[% topic.view_topic_url | html_entity %]">[% topic.title | html_entity %]</a></td>
         <td>[% topic.author | html_entity %]</td>
         <td>[% topic.reviewer | html_entity %]</td>
         <td>[% IF topic.cc == "" %]&nbsp;[% ELSE %][% topic.cc | html_entity %][% END %]</td>
@@ -122,15 +122,15 @@ Change state: &nbsp;
 
 <p>
 [% IF projects_enabled != 0 %]
-    <a href="[% list_projects_url | uri | html %]">Administer Projects</a> | 
+    <a href="[% list_projects_url | html_entity %]">Administer Projects</a> | 
 [% END %]
 
-    <a href="[% view_metrics_url | uri | html %]">Metrics Report</a>
+    <a href="[% view_metrics_url | html_entity %]">Metrics Report</a>
 
 [% IF rss_enabled %]
 
-| <a href="[% list_sort_url_rss | uri | html %]">RSS</a>
-  <link rel="alternate" type="application/rdf+xml" title="RSS" href="[% list_sort_url_rss | uri | html %]" />
+| <a href="[% list_sort_url_rss | html_entity %]">RSS</a>
+  <link rel="alternate" type="application/rdf+xml" title="RSS" href="[% list_sort_url_rss | html_entity %]" />
 [% END %]
 
 </p>
